<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/profile_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <LinearLayout
            android:id="@+id/profile_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/profile_new_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_new" />

            <Spinner
                android:id="@+id/profile_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.68" />

            <Button
                android:id="@+id/profile_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

        </LinearLayout>

        <TextView
            android:id="@+id/server_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server" />

        <EditText
            android:id="@+id/server_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/profile_test_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test" />

            <Button
                android:id="@+id/profile_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>

</LinearLayout>