<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/supplier_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supplier"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/supplier_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/order_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/order_number_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/scan_stocking_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_stocking" />

</LinearLayout>