<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<LinearLayout
	    android:id="@+id/LinearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/product_name_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/product_name"
					android:textAppearance="?android:attr/textAppearanceLarge" />

				<EditText
					android:id="@+id/product_name_edit"
					android:layout_width="146dp"
					android:layout_height="wrap_content"
					android:ems="10" />

				<TextView
					android:id="@+id/product_sku_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/sku"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/product_sku_edit"
					android:layout_width="match_parent"
					android:layout_height="wrap_content" >

					<requestFocus />
				</EditText>
			</LinearLayout>

			<ImageSwitcher
				android:id="@+id/product_image_switcher"
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
			</ImageSwitcher>
		</LinearLayout>

		<TableLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

			<TableRow
				android:id="@+id/tableRow1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/product_price_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/price"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/product_price_edit"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:ems="10"
					android:inputType="numberDecimal" />
			</TableRow>

			<TableRow
				android:id="@+id/tableRow2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/product_permalink_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/permalink"
					android:textAppearance="?android:attr/textAppearanceSmall" />

				<EditText
					android:id="@+id/product_permalink_edit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:ems="10" />
			</TableRow>

		</TableLayout>

		<TextView
		    android:id="@+id/barcode_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/barcode"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

			<EditText
			    android:id="@+id/barcode_text"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:ems="10"
			    android:inputType="number" />

			<ImageButton
			    android:id="@+id/barcode_scan_button"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:src="@drawable/scanicon_sm" />

		</LinearLayout>

		<RelativeLayout
		    android:id="@+id/RelativeLayout1"
		    android:layout_width="match_parent"
		    android:layout_height="236dp"
		    android:orientation="vertical" >

			<TextView
				android:id="@+id/product_description_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:text="@string/product_description" />

			<EditText
			    android:id="@+id/product_description_edit"
			    android:layout_width="match_parent"
			    android:layout_height="160dp"
			    android:layout_above="@+id/save_button"
			    android:layout_alignParentLeft="true"
			    android:layout_below="@+id/product_description_title"
			    android:ems="10"
			    android:inputType="textMultiLine" />

			<Button
				android:id="@+id/save_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:text="@string/save" />

			<ToggleButton
				android:id="@+id/listed_toggle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentLeft="true" />

			<Button
			    android:id="@+id/delete_button"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentBottom="true"
			    android:layout_toLeftOf="@+id/save_button"
			    android:text="@string/delete" />

		</RelativeLayout>

	</LinearLayout>
</ScrollView>
